src/lib/reader/hlsl/parser.cpp
#include "parser.h"

#include "../../util/string_util.h"
#include "../../ast/type_flags.h"
#include "parser/effect_state.h"
#include "parse_exception.h"

namespace hlsl {

Parser::Parser(const std::string_view& source)
  : _scanner(source) {
}

ast::Ast* Parser::parse() {
  _ast = new ast::Ast();

  ast::AstRoot* root = _ast->root();

  ast::AstStatement* lastStatement = nullptr;
  while (!isAtEnd()) {
    ast::AstStatement* statement = nullptr;
    try {
      statement = parseTopLevelStatement();
    } catch (ParseException e) {
      std::cerr << "Error: "  << e.message << std::endl;
      std::cerr << "  Token: " << e.token.lexeme() << std::endl;
      std::cerr << "  Line: " << _scanner.absoluteLine() << std::endl;
      delete _ast;
      _ast = nullptr;
      return nullptr;
    }
    if (statement == nullptr) {
      if (isAtEnd()) {
        break;
      }
      std::cerr << "Error Line: " << _scanner.absoluteLine() << std::endl;
      delete _ast;
      _ast = nullptr;
      return nullptr;
    }
    if (root->statements == nullptr) {
      root->statements = statement;
    }
    if (lastStatement != nullptr) {
      lastStatement->next = statement;
    }
    lastStatement = statement;
  }

  return _ast;
}

bool Parser::isAtEnd() {
  return (_pending.empty() && _scanner.isAtEnd()) || peekNext().type() == TokenType::EndOfFile;
}

Token Parser::consume(TokenType type, const char* message) {
  if (check(type)) {
    return advance();
  }
  throw ParseException(peekNext(), message);
}

Token Parser::advance() {
  if (!_pending.empty()) {
    Token t = _pending.front();
    _pending.pop_front();
    if (!_restore.empty()) {
      _restore.back().push_back(t);
    }
    return t;
  }

  if (!_restore.empty()) {
    Token t = _scanner.scanNext();
    _restore.back().push_back(t);
    return t;
  }
  
  return _scanner.scanNext();
}

const Token& Parser::peekNext() {
  if (!_pending.empty()) {
    return _pending.front();
  }
  _pending.push_back(_scanner.scanNext());
  return _pending.front();
}

bool Parser::match(TokenType type) {
  if (check(type)) {
    advance();
    return true;
  }
  return false;
}

bool Parser::check(TokenType type) {
  if (isAtEnd()) {
    return false;
  }
  const Token& tk = peekNext();
  return tk.type() == type;
}

ast::AstStatement* Parser::parseTopLevelStatement() {
  // Discard any solo semicolons
  while (match(TokenType::Semicolon) && !isAtEnd()) {}

  ast::AstAttribute* attributes = parseAttributes();

  if (match(TokenType::Struct)) {
    ast::AstStructStmt* structNode = parseStruct();
    if (structNode != nullptr) {
      structNode->attributes = attributes;
    }
    
    ast::AstStatement* node = structNode;
    if (peekNext().type() == TokenType::Identifier) {
      Token name = advance();
      ast::AstVariableStmt* var = _ast->createNode<ast::AstVariableStmt>();
      var->type = _ast->createNode<ast::AstType>();
      var->type->baseType = ast::BaseType::Struct;
      var->type->name = structNode->name;
      var->name = name.lexeme();
      node = var;
      while (match(TokenType::Comma)) {
        Token name = consume(TokenType::Identifier, "identifier expected");
        ast::AstVariableStmt* next = _ast->createNode<ast::AstVariableStmt>();
        next->type = _ast->createNode<ast::AstType>();
        next->type->baseType = ast::BaseType::Struct;
        next->type->name = structNode->name;
        next->name = name.lexeme();
        var->next = next;
        var = next;
      }
    }

    consume(TokenType::Semicolon, "';' expected for struct");
    return node;
  }

  if (check(TokenType::Cbuffer) || check(TokenType::Tbuffer)) {
    Token bufferType = advance();
    ast::AstBufferStmt* node = parseBuffer();
    node->bufferType = bufferType.type() == TokenType::Cbuffer
        ? ast::BufferType::Cbuffer
        : ast::BufferType::Tbuffer;
    if (node != nullptr) {
      node->attributes = attributes;
    }
    return node;
  }

  if (match(TokenType::Typedef)) {
    ast::AstTypedefStmt* node = parseTypedef();
    if (node != nullptr) {
      node->attributes = attributes;
    }
    consume(TokenType::Semicolon, "Expected ';' after typedef");
    return node;
  }

  // Global Declaration
  ast::AstType* type = parseType(true);
  if (type != nullptr) {
    // Either a variable or function declaration.
    Token identifier = consume(TokenType::Identifier, "identifier expected");

    // function declaration
    if (check(TokenType::LeftParen)) {
      ast::AstFunctionStmt* func = parseFunctionStmt(type, identifier.lexeme());
      if (func != nullptr) {
        func->attributes = attributes;
      }
      return func;
    }

    // variable declaration
    ast::AstVariableStmt* var = parseVariableStmt(type, identifier.lexeme(), attributes);
    consume(TokenType::Semicolon, "Expected ';' after variable declaration");

    return var;
  }

  return nullptr;
}

ast::AstTypedefStmt* Parser::parseTypedef() {
  ast::AstTypedefStmt* node = _ast->createNode<ast::AstTypedefStmt>();
  node->type = parseType(true, "typedef type expected");
  node->name = advance().lexeme();
  _typedefs[node->name] = node;
  return node;
}

ast::AstStructStmt* Parser::parseStruct() {
  ast::AstStructStmt* s = _ast->createNode<ast::AstStructStmt>();

  if (peekNext().type() == TokenType::LeftBrace) {
    // anonymous struct
    static int anonStructCount = 0;
    _anonymousStructNames.push_back("__anon_struct_" + std::to_string(anonStructCount++));
    s->name = std::string_view(_anonymousStructNames.back());
  } else {
    Token name = consume(TokenType::Identifier, "struct name expected.");
    consume(TokenType::LeftBrace, "'{' expected for struct");  
    s->name = name.lexeme();
  }

  _structs[s->name] = s;

  ast::AstField* lastField = nullptr;
  ast::AstFunctionStmt* lastMethod = nullptr;

  while (!check(TokenType::RightBrace) && !isAtEnd()) {
    ast::AstField* field = parseStructField();

    if (check(TokenType::LeftParen)) {
      // we have a function, so the field parsed above should contain
      //   the return type and function name.  We just need to parse the
      //   body of the function.

      ast::AstFunctionStmt *method = parseFunctionStmt(field->type, field->name);

      if (s->methods == nullptr) {
        s->methods = method;
      }
      if (lastMethod != nullptr) {
        lastMethod->next = method;
      }
      lastMethod = method;
    
      continue;
    }

    if (s->fields == nullptr) {
      s->fields = field;
    }
    if (lastField != nullptr) {
      lastField->next = field;
    }
    lastField = field;

    // We hit a semicolon, so that's the end of this field declaration
    if (check(TokenType::Semicolon)) {
        consume(TokenType::Semicolon, "';' expected for struct field");
        continue;
    }

    // If we have a comma, then there are more variables for the same
    //   type coming, so consume them.
    if (check(TokenType::Comma)) {
      while (check(TokenType::Comma)) {
        advance(); // consume comma
        ast::AstField* nextField = _ast->createNode<ast::AstField>();
        nextField->type = field->type;
        nextField->name = advance().lexeme();
        if (match(TokenType::LeftBracket)) {
          // Array field
          nextField->isArray = true;
          nextField->arraySize = parseArraySize();
        }
        lastField->next = nextField;
        lastField = nextField;
      }

      consume(TokenType::Semicolon, "';' expected for struct field");
      continue;
    }
  }

  consume(TokenType::RightBrace, "'}' expected for struct");

  return s;
}

ast::AstField* Parser::parseStructField() {
  ast::AstField* field = _ast->createNode<ast::AstField>();

  Token tk = peekNext();
  if (isInterpolationModifier(tk.type())) {
    field->interpolation = tokenTypeToInterpolationModifier(tk.type());
    advance();
  }

  field->type = parseType(false /* , "struct field type expected" */);
  field->name = advance().lexeme();

  if (match(TokenType::LeftBracket)) {
    // Array field
    field->isArray = true;
    field->arraySize = parseArraySize();
  }

  if (match(TokenType::Colon)) {
    // Struct field has a semantic
    field->semantic = advance().lexeme();
  }

  return field;
}

ast::AstAttribute* Parser::parseAttributes() {
  // Parse attributes in the forms:
  // [A] statement
  // [A, B] statement
  // [A][B] statement
  // Where: A, B are attributes in the form of:
  // A
  // A(a[,b]*) where a and b are expressions
  ast::AstAttribute* firstAttribute = nullptr;
  ast::AstAttribute* lastAttribute = nullptr;;

  if (!match(TokenType::LeftBracket)) {
    return firstAttribute;
  }

  while (!isAtEnd()) {
    ast::AstAttribute* attribute = _ast->createNode<ast::AstAttribute>();
    if (firstAttribute == nullptr) {
      firstAttribute = attribute;
    }
    if (lastAttribute != nullptr) {
      lastAttribute->next = attribute;
    }
    lastAttribute = attribute;

    Token name = consume(TokenType::Identifier, "attribute name expected");
    lastAttribute->name = name.lexeme();

    if (match(TokenType::LeftParen)) {
      ast::AstExpression* firstArg = nullptr;
      ast::AstExpression* lastArg = nullptr;
      while (!isAtEnd() && !match(TokenType::RightParen)) {
        ast::AstExpression* arg = parseExpression();
        if (firstArg == nullptr) {
          firstArg = arg;
        }
        if (lastArg != nullptr) {
          lastArg->next = arg;
        }
        lastArg = arg;

        if (!match(TokenType::Comma)) {
          if (!match(TokenType::RightParen)) {
            throw ParseException(peekNext(), "')' or ',' expected for attribute");
          }
          break;
        }
      }
    }

    if (match(TokenType::Comma)) {
      continue;
    }

    if (!match(TokenType::RightBracket)) {
      throw ParseException(peekNext(), "']' or ',' expected for attribute");
      break;
    }

    if (!match(TokenType::LeftBracket)) {
      break;
    }
  }

  return firstAttribute;
}

ast::AstExpression* Parser::parseAssignmentExpression(ast::AstType* type) {
  if (check(TokenType::LeftBrace)) {
    // Array or struct initialization expression (e.g. a = {1, 2, 3})
    if (type->baseType == ast::BaseType::Struct) {
      // Struct initialization
      return parseStructInitialization(type);
    }

    // Array initialization
    return parseArrayInitialization(type);
  }

  ast::AstExpression* expression = parseLogicalOrExpression();
  if (expression == nullptr) {
    return nullptr;
  }

  // Check for cascading assignment operators (a = b = c)
  if (!isAssignmentOperator(peekNext().type())) {
    return expression;
  }

  ast::Operator op = tokenTypeToAssignmentOperatator(advance().type());

  ast::AstExpression* value = parseAssignmentExpression(type);
  if (value == nullptr) {
    throw ParseException(peekNext(), "expression expected for assignment");
  }
  ast::AstAssignmentExpr* assignment = _ast->createNode<ast::AstAssignmentExpr>();
  assignment->op = op;
  assignment->variable = expression;
  assignment->value = value;
  return assignment;
}

ast::AstExpression* Parser::parseStructInitialization(ast::AstType* type) {
  consume(TokenType::LeftBrace, "'{' expected for struct initialization");

  ast::AstStructStmt* structType = _structs[type->name];
  if (structType == nullptr) {
    throw ParseException(peekNext(), "unknown struct type");
  }
  ast::AstField* field = structType->fields;
  ast::AstExpression* firstExpression = nullptr;
  ast::AstExpression* lastExpression = nullptr;
  while (field != nullptr) {
    ast::AstExpression* expression = parseAssignmentExpression(field->type);
    if (firstExpression == nullptr) {
      firstExpression = expression;
    }
    if (lastExpression != nullptr) {
      lastExpression->next = expression;
    }
    lastExpression = expression;
    field = field->next;
    if (field != nullptr) {
      consume(TokenType::Comma, "',' expected for struct initialization");
    }
  }

  if (check(TokenType::Comma)) {
    advance(); // skip trailing comma
  }

  consume(TokenType::RightBrace, "'}' expected for array initialization");

  ast::AstStructInitializerExpr* init = _ast->createNode<ast::AstStructInitializerExpr>();
  init->structType = structType;
  init->fields = firstExpression;
  return init;
}

ast::AstExpression* Parser::parseArrayInitialization(ast::AstType* type) {
  if (match(TokenType::LeftBrace)) {
      // Nested array initialization (e.g. a = {{1, 2}, {3, 4}}
      ast::AstExpression* firstExpression = parseArrayInitialization(type);
      ast::AstExpression* lastExpression = firstExpression;

      while (!isAtEnd() && match(TokenType::Comma)) {
        if (check(TokenType::RightBrace)) {
          // Allow trailing comma (e.g. a = {1, 2, 3,})
          break;
        }
        
        ast::AstExpression* expression = parseArrayInitialization(type);
        if (expression == nullptr) {
          throw ParseException(peekNext(), "expression expected for assignment");
        }
        lastExpression->next = expression;
        lastExpression = expression;
      }

      consume(TokenType::RightBrace, "'}' expected for array initialization");

      ast::AstArrayInitializerExpr* init = _ast->createNode<ast::AstArrayInitializerExpr>();
      init->elements = firstExpression;

      return init;
  }
  
  return parseExpression();
}

ast::AstExpression* Parser::parseExpression() {
  return parseLogicalOrExpression();
}

ast::AstExpression* Parser::parseExpressionList() {
  ast::AstExpression* firstExpression = parseExpression();
  if (firstExpression == nullptr) {
    return nullptr;
  }
  ast::AstExpression* lastExpression = firstExpression;

  while (!isAtEnd() && match(TokenType::Comma)) {
    if (check(TokenType::RightBrace) || check(TokenType::RightParen)) {
      break;
    }
    ast::AstExpression* expression = parseExpression();
    if (expression == nullptr) {
      throw ParseException(peekNext(), "expression expected for expression list");
      break;
    }
    lastExpression->next = expression;
    lastExpression = expression;
  }

  return firstExpression;
}

ast::AstField* Parser::parseBufferField() {
  ast::AstType* type = parseType(false, "buffer field type expected");

  ast::AstField* lastDecl = nullptr;
  ast::AstField* firstDecl = nullptr;

  do {
    ast::AstField* decl = _ast->createNode<ast::AstField>();
    if (firstDecl == nullptr) {
      firstDecl = decl;
    }
    if (lastDecl != nullptr) {
      lastDecl->next = decl;
    }
    lastDecl = decl;

    decl->name = consume(TokenType::Identifier, "identifier expected for declaration").lexeme();
    decl->type = type;

    if (match(TokenType::LeftBracket)) {
      decl->type->array = true;
      decl->type->arraySize = parseExpression();
      consume(TokenType::RightBracket, "']' expected for array declaration");
    }

    if (match(TokenType::Equal)) {
      if (decl->type->array) {
        if (!match(TokenType::LeftBrace)) {
          throw ParseException(peekNext(), "'{' expected for array initializer");
        }
        decl->assignment = parseExpressionList();
        consume(TokenType::RightBrace, "'}' expected for array initializer");
      } else if (isSamplerBaseType(decl->type->baseType)) {
        decl->assignment = parseSamplerState();
      } else {
        decl->assignment = parseExpression();
      }
    }
  } while (match(TokenType::Comma) && !isAtEnd());

  return firstDecl;
}

ast::AstSamplerState* Parser::parseSamplerState() {
  consume(TokenType::SamplerState, "sampler state expected");
  consume(TokenType::LeftBrace, "'{' expected for sampler state");

  ast::AstSamplerState* samplerState = _ast->createNode<ast::AstSamplerState>();

  ast::AstStateAssignment* lastStateAssignment = nullptr;
  while (!match(TokenType::RightBrace) && !isAtEnd()) {
    ast::AstStateAssignment* stateAssignment = parseStateAssignment(true, true);
    if (samplerState->stateAssignments == nullptr) {
      samplerState->stateAssignments = stateAssignment;
    }
    if (lastStateAssignment != nullptr) {
      lastStateAssignment->next = stateAssignment;
    }
    lastStateAssignment = stateAssignment;
  }
  
  return samplerState;
}

ast::AstStateAssignment* Parser::parseStateAssignment(bool isSamplerState, bool isPipelineState) {
  ast::AstStateAssignment* stateAssignment = _ast->createNode<ast::AstStateAssignment>();

  stateAssignment->stateName = consume(TokenType::Identifier,
      "identifier expected for state assignment").lexeme();

  const EffectState* state =
      getEffectState(stateAssignment->stateName, isSamplerState, isPipelineState);

  if (state == nullptr) {
    throw ParseException(peekNext(),
        "unknown state assignment " + std::string(stateAssignment->stateName));
  }

  stateAssignment->d3dRenderState = state->d3dRenderState;

  consume(TokenType::Equal, "'=' expected for state assignment");

  const bool expectsExpression = state->values == colorMaskValues;
  const bool expectsInteger = state->values == integerValues;
  const bool expectsFloat = state->values == floatValues;
  const bool expectsBoolean = state->values == booleanValues;

  if (!expectsExpression && !expectsInteger && !expectsFloat && !expectsBoolean) {
    consume(TokenType::Identifier, "identifier expected for state assignment");
  }

  if (state->values == nullptr) {
    Token tk = advance();
    if (tk.type() != TokenType::Identifier || tk.lexeme() != "compile") {
      throw ParseException(tk, "invalid state assignment");
    }

    while (!match(TokenType::Semicolon) && !isAtEnd()) {
      advance();
    }
  } else {
    if (expectsExpression) {
      int mask = 0;
      while (!isAtEnd()) {
        Token tk = advance();
        if (tk.type() == TokenType::IntLiteral) {
          mask |= util::toInt(tk.lexeme());
        } else if (tk.type() == TokenType::Identifier) {
          // color mask value
          const EffectStateValue* stateValue = colorMaskValues;
          while (stateValue->name != nullptr) {
            if (util::stringEqualCaseInsensitive(tk.lexeme(), stateValue->name)) {
              mask |= stateValue->value;
              break;
            }
            ++stateValue;
          }
        } else {
          throw ParseException(tk, "invalid state assignment");
        }
        if (!match(TokenType::Pipe)) {
          break;
        }
      }
    } else if (expectsInteger) {
      Token tk = consume(TokenType::IntLiteral, "integer expected for state assignment");
      stateAssignment->intValue = util::toInt(tk.lexeme());
    } else if (expectsFloat) {
      Token tk = consume(TokenType::FloatLiteral, "float expected for state assignment");
      stateAssignment->floatValue = util::toFloat(tk.lexeme());
    } else if (expectsBoolean) {
      const Token& tk = advance();
      if (tk.type() == TokenType::Identifier) {
        const EffectStateValue* value = getEffectStateValue(tk.lexeme(), state);
        if (value != nullptr) {
          stateAssignment->intValue = value->value;
        }
      } else if (tk.type() == TokenType::IntLiteral) {
        stateAssignment->intValue = util::toInt(tk.lexeme());
      } else {
        throw ParseException(peekNext(), "invalid state assignment");
      }
    } else {
      throw ParseException(peekNext(), "invalid state assignment");
    }
  }

  consume(TokenType::Semicolon, "';' expected for state assignment");

  return stateAssignment;
}

ast::AstBufferStmt* Parser::parseBuffer() {
  ast::AstBufferStmt* buffer = _ast->createNode<ast::AstBufferStmt>();
  buffer->name = consume(TokenType::Identifier, "buffer name expected").lexeme();
  if (match(TokenType::Colon)) {
    consume(TokenType::Register, "register expected");
    consume(TokenType::LeftParen, "'(' expected");
    buffer->registerName = consume(TokenType::Identifier, "register name expected").lexeme();
    consume(TokenType::RightParen, "')' expected");
  }
  consume(TokenType::LeftBrace, "'{' expected for buffer");
  
  ast::AstField* lastField = nullptr;
  while (!match(TokenType::RightBrace) && !isAtEnd()) {
    ast::AstField* field = parseBufferField();
    if (field == nullptr) {
      throw ParseException(peekNext(), "field expected for buffer");
    }

    if (buffer->field == nullptr) {
      buffer->field = field;
    } else {
      lastField->next = field;
    }
    lastField = field;

    consume(TokenType::Semicolon, "';' expected for buffer field");
  }

  return buffer;
}

ast::AstType* Parser::parseType(bool allowVoid, const char* exceptionMessage) {
  // We don't know if this is a type or a variable name yet, so start
  // recording the tokens in case we need to rewind.
  startRestorePoint();

  uint32_t flags = ast::TypeFlags::None;
  while (parseTypeModifier(flags) || parseInterpolationModifier(flags)) {}

  Token token = advance();

  if (token.type() == TokenType::Struct) {
    // We can discard the tokens we recorded because we know this is a type.
    discardRestorePoint();
    ast::AstStructStmt* structType = parseStruct();
    ast::AstType* type = _ast->createNode<ast::AstType>();
    type->flags = flags;
    type->baseType = ast::BaseType::Struct;
    type->name = structType->name;
    return type;
  }

  // If the token is an Identifier, it could be a user typedef type or a struct.
  if (token.type() == TokenType::Identifier) {
    if (_typedefs.find(token.lexeme()) != _typedefs.end()) {
      // We can discard the tokens we recorded because we know this is a type.
      discardRestorePoint();
      ast::AstType* type = _ast->createNode<ast::AstType>();
      type->flags = flags;
      type->baseType = ast::BaseType::UserDefined;
      type->name = token.lexeme();
      return type;
    }

    if (_structs.find(token.lexeme()) != _structs.end()) {
      // We can discard the tokens we recorded because we know this is a type.
      discardRestorePoint();
      ast::AstType* type = _ast->createNode<ast::AstType>();
      type->flags = flags;
      type->baseType = ast::BaseType::Struct;
      type->name = token.lexeme();
      return type;
    }

    // Roll back to the start of the type, because it wasn't a typedef or struct.
    restorePoint();

    if (exceptionMessage != nullptr) {
      // If a type was expected, throw an exception.
      throw ParseException(token, exceptionMessage);
    }

    // Otherwise the caller was just checking to see if it was a Type, so returning
    // null will indicate that it wasn't.
    return nullptr;
  }

  // Check to see if the token is a built-in type.
  ast::BaseType baseType = tokenTypeToBaseType(token.type());

  if (baseType == ast::BaseType::Undefined) {
    // If the token wasn't a built-in type, roll back to the start of the type.
    restorePoint();
    if (exceptionMessage != nullptr) {
      // If a type was expected, throw an exception.
      throw ParseException(token, exceptionMessage);
    }
    // Otherwise the caller was just checking to see if it was a Type, so returning
    // null will indicate that it wasn't.
    return nullptr;
  }

  if (baseType == ast::BaseType::Void) {
    // If it's a void type, check to see if void is allowed in this context.
    if (allowVoid) {
      // We can discard the tokens we recorded because we know this is an
      // accepted void type.
      discardRestorePoint();
      ast::AstType* type = _ast->createNode<ast::AstType>();
      type->flags = flags;
      type->baseType = baseType;
      return type;
    } else {
      // If void isn't allowed, roll back to the start of the type.
      restorePoint();
      if (exceptionMessage != nullptr) {
        // If a type was expected, throw an exception.
        throw ParseException(token, exceptionMessage);
      }
      // Otherwise the caller was just checking to see if it was a Type, so returning
      // null will indicate that it wasn't.
      return nullptr;
    }
  }
 
  // For template types like Samper<float> or RWStorageBuffer<float>, parse the template arguments.
  ast::AstTemplateArg* templateArg = nullptr;
  if (match(TokenType::Less)) {
    templateArg = _ast->createNode<ast::AstTemplateArg>();
    templateArg->value = parseType(false);
    if (match(TokenType::Comma)) {
      ast::AstTemplateArg* next = _ast->createNode<ast::AstTemplateArg>();
      next->value = parseSingularExpression();
      templateArg->next = next;
    }
    consume(TokenType::Greater, "'>' expected for template type");
  }

  // We can discard the recorded tokens we recorded because we know this is a type.
  discardRestorePoint();

  ast::AstType* type = _ast->createNode<ast::AstType>();
  type->flags = flags;
  type->baseType = baseType;
  type->templateArg = templateArg;

  return type;
}

bool Parser::parseTypeModifier(uint32_t& flags) {
  if (match(TokenType::Const)) {
    flags |= ast::TypeFlags::Const;
    return true;
  }
  
  if (match(TokenType::Static)) {
    flags |= ast::TypeFlags::Static;
    return true;
  }

  if (match(TokenType::Uniform)) {
    return true;
  }

  if (match(TokenType::Inline)) {
    return true;
  }

  if (match(TokenType::In)) {
    flags |= ast::TypeFlags::Input;
    return true;
  }

  if (match(TokenType::Out)) {
    flags |= ast::TypeFlags::Output;
    return true;
  }

  if (match(TokenType::Inout)) {
    flags |= ast::TypeFlags::Input;
    flags |= ast::TypeFlags::Output;
    return true;
  }

  if (match(TokenType::Unorm)) {
    flags |= ast::TypeFlags::Unorm;
    return true;
  }

  if (match(TokenType::Snorm)) {
    flags |= ast::TypeFlags::Snorm;
    return true;
  }

  return false;
}

bool Parser::parseInterpolationModifier(uint32_t& flags) {
  if (match(TokenType::Linear)) {
    flags |= ast::TypeFlags::Linear;
    return true;
  }

  if (match(TokenType::Centroid)) {
    flags |= ast::TypeFlags::Centroid;
    return true;
  }

  if (match(TokenType::Nointerpolation)) {
    flags |= ast::TypeFlags::Nointerpolation;
    return true;
  }

  if (match(TokenType::Noperspective)) {
    flags = flags | ast::TypeFlags::Noperspective;
    return true;
  }

  if (match(TokenType::Sample)) {
    flags = flags | ast::TypeFlags::Sample;
    return true;
  }

  return false;
}

ast::AstExpression* Parser::parseLogicalOrExpression() {
  ast::AstExpression* expr = parseLogicalAndExpression();
  while (match(TokenType::PipePipe)) {
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = ast::Operator::OrOr;
    op->left = expr;
    op->right = parseLogicalAndExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parseLogicalAndExpression() {
  ast::AstExpression* expr = parseInclusiveOrExpression();
  while (match(TokenType::AmpersandAmpersand)) {
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = ast::Operator::AndAnd;
    op->left = expr;
    op->right = parseInclusiveOrExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parseInclusiveOrExpression() {
  ast::AstExpression* expr = parseExclusiveOrExpression();
  while (match(TokenType::Pipe)) {
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = ast::Operator::Or;
    op->left = expr;
    op->right = parseExclusiveOrExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parseExclusiveOrExpression() {
  ast::AstExpression* expr = parseAndExpression();
  while (match(TokenType::Caret)) {
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = ast::Operator::Xor;
    op->left = expr;
    op->right = parseAndExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parseAndExpression() {
  ast::AstExpression* expr = parseEqualityExpression();
  while (match(TokenType::Ampersand)) {
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = ast::Operator::And;
    op->left = expr;
    op->right = parseEqualityExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parseEqualityExpression() {
  ast::AstExpression* expr = parseRelationalExpression();
  while (check(TokenType::EqualEqual) || check(TokenType::BangEqual)) {
    Token tk = advance();
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = tk.type() == TokenType::EqualEqual
        ? ast::Operator::EqualEqual : ast::Operator::NotEqual;
    op->left = expr;
    op->right = parseRelationalExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parseRelationalExpression() {
  ast::AstExpression* expr = parseShiftExpression();
  while (check(TokenType::Greater) || check(TokenType::Less) ||
        check(TokenType::GreaterEqual) || check(TokenType::LessEqual)) {
    Token tk = advance();
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = tk.type() == TokenType::Greater ? ast::Operator::Greater :
             tk.type() == TokenType::Less ? ast::Operator::Less :
             tk.type() == TokenType::GreaterEqual ? ast::Operator::GreaterEqual :
             ast::Operator::LessEqual;
    op->left = expr;
    op->right = parseShiftExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parseShiftExpression() {
  ast::AstExpression* expr = parseAdditiveExpression();
  while (check(TokenType::GreaterGreater) || check(TokenType::LessLess)) {
    Token tk = advance();
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = tk.type() == TokenType::GreaterGreater ? ast::Operator::RightShift :
             ast::Operator::LeftShift;
    op->left = expr;
    op->right = parseAdditiveExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parseAdditiveExpression() {
  ast::AstExpression* expr = parseMultiplicativeExpression();
  while (check(TokenType::Plus) || check(TokenType::Minus)) {
    Token tk = advance();
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = tk.type() == TokenType::Plus ? ast::Operator::Add : ast::Operator::Subtract;
    op->left = expr;
    op->right = parseMultiplicativeExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parseMultiplicativeExpression() {
  ast::AstExpression* expr = parsePrefixExpression();
  while (check(TokenType::Star) || check(TokenType::Slash) || check(TokenType::Percent) ||
      check(TokenType::PlusPlus) || check(TokenType::MinusMinus)) {
    Token tk = advance();
    ast::AstBinaryExpr* op = _ast->createNode<ast::AstBinaryExpr>();
    op->op = tk.type() == TokenType::Star ? ast::Operator::Multiply :
             tk.type() == TokenType::Slash ? ast::Operator::Divide : ast::Operator::Modulo;
    op->left = expr;
    op->right = parsePrefixExpression();
    expr = op;
  }
  return expr;
}

ast::AstExpression* Parser::parsePrefixExpression() {
  if (check(TokenType::Minus) || check(TokenType::Bang) || check(TokenType::Tilde) ||
      check(TokenType::PlusPlus) || check(TokenType::MinusMinus)) {
    Token tk = advance();
    ast::AstPrefixExpr* op = _ast->createNode<ast::AstPrefixExpr>();
    op->op = tk.type() == TokenType::Minus ? ast::Operator::Subtract :
             tk.type() == TokenType::Bang ? ast::Operator::Not :
             tk.type() == TokenType::Tilde ? ast::Operator::BitNot :
             tk.type() == TokenType::PlusPlus ? ast::Operator::PlusPlus :
             ast::Operator::MinusMinus;
    op->expression = parsePrefixExpression();
    return op;
  }
  return parseSingularExpression();
}

ast::AstExpression* Parser::parseSingularExpression() {
  ast::AstExpression* expr = parsePrimaryExpression();
  expr = parsePostfixExpression(expr);

  if (match(TokenType::Question)) {
    // Ternary conditional expression (a ? b : c)
    ast::AstTernaryExpr* op = _ast->createNode<ast::AstTernaryExpr>();
    op->condition = expr;
    op->trueExpr = parseExpression();
    consume(TokenType::Colon, "Expected ':' after ternary expression");
    op->falseExpr = parseExpression();
    expr = op;
  }

  return expr;
}

ast::AstExpression* Parser::parsePostfixExpression(ast::AstExpression* expr) {
  // ++, --, [], .
  if (check(TokenType::PlusPlus) || check(TokenType::MinusMinus)) {
    Token tk = advance();
    ast::AstIncrementExpr* op = _ast->createNode<ast::AstIncrementExpr>();
    op->op = tk.type() == TokenType::PlusPlus ? ast::Operator::PlusPlus : ast::Operator::MinusMinus;
    op->variable = expr;
    return parsePostfixExpression(op);
  }

  if (match(TokenType::LeftBracket)) {
    ast::AstExpression* index = parseExpression();
    consume(TokenType::RightBracket, "Expected ']' after expression");
    ast::AstArrayExpr* array = _ast->createNode<ast::AstArrayExpr>();
    array->array = expr;
    array->index = index;
    return parsePostfixExpression(array);
  }

  if (match(TokenType::Dot)) {
    ast::AstMemberExpr* member = _ast->createNode<ast::AstMemberExpr>();
    member->object = expr;
    member->member = parseSingularExpression();   
    return parsePostfixExpression(member);
  }

  return expr;
}

ast::AstExpression* Parser::parsePrimaryExpression() {
  if (check(TokenType::Identifier)) {
    // An identifier is either a variable or a function call
    Token name = advance();
    if (check(TokenType::LeftParen)) {
      ast::AstCallExpr* expr = _ast->createNode<ast::AstCallExpr>();
      expr->name = name.lexeme();
      expr->arguments = parseArgumentList();
      return expr;
    }

    ast::AstVariableExpr* expr = _ast->createNode<ast::AstVariableExpr>();
    expr->name = name.lexeme();
    return expr;
  }

  if (check(TokenType::IntLiteral) || check(TokenType::FloatLiteral) || check(TokenType::True) ||
      check(TokenType::False)) {
    Token tk = advance();
    ast::AstLiteralExpr* expr = _ast->createNode<ast::AstLiteralExpr>();
    expr->type = tokenTypeToBaseType(tk.type());
    expr->value = tk.lexeme();
    return expr;
  }

  if (check(TokenType::LeftParen)) {
    // Either a parenthesized expression or a cast expression
    startRestorePoint();
    advance(); // consume '('
    if (isType(peekNext())) {
      advance();
      if (check(TokenType::RightParen)) {
        // (Type) is a cast expression
        restorePoint();

        advance();  // consume '('
